--- a/cowrie-etc/cowrie.cfg
+++ b/cowrie-etc/cowrie.cfg
@@ -572,7 +572,8 @@ listen_endpoints = tcp:2223:interface=0.0.0.0
 # MySQL logging requires extra software: sudo apt-get install libmysqlclient-dev
 # MySQL logging requires an extra Python module: pip install mysql-python
 #
-#[output_mysql]
+[output_mysql]
+enabled = true
 host = localhost
 database = cowrie
 username = cowrie
